Fix admin setting background & other contrasts

--- a/alien-night-theme.css
+++ b/alien-night-theme.css
@@ -2,13 +2,37 @@
 Alien Night Theme (Desktop) - A Dark Theme for Discourse
 Author: Ignaz Biegler
 Github: https://github.com/B-iggy/discourse-dark-theme
-Version 1.1.2
+Version 1.1.3
 */
+.theme-switcher {
+    margin-left: 10%;
+}
+
+.theme-switcher-attr {
+    color: #fff !important;
+    font-weight: bold;
+    padding: 5px;
+    margin: 2px;
+    display: inline-block;
+}
+
+.theme-switcher-light {
+    background-color: #fff;
+    color: #222 !important;
+    border: 1px solid #333;
+}
+
+.theme-switcher-dark {
+    background-color: #10161d;
+    border: 1px solid #fff;
+}
 
 body,
 .user-main .user-content,
 body .boxed.white,
-#reply-control .wmd-controls .d-editor-input, #reply-control .wmd-controls .d-editor-preview {
+#reply-control .wmd-controls .d-editor-input,
+#reply-control .wmd-controls .d-editor-preview,
+.admin-detail {
     background-color: #10161d;
 }
 
@@ -42,11 +66,13 @@ nav.post-controls button.create,
 .category-list-item>footer figure,
 .user-preferences .static,
 .d-editor-button-bar button,
-.nav-pills>li>a {
+.nav-pills>li>a,
+#reply-control .contents .d-editor-input, 
+#reply-control .contents .d-editor-preview {
     color: #fff;
 }
 
-.mobile-view .nav-pills>li>a {
+html.dark.mobile-view .nav-pills>li>a {
     color: #222;
 }
 
@@ -118,12 +144,6 @@ span.highlighted {
     background-color: #4c3434;
 }
 
-body .boxed.white,
-#reply-control .wmd-controls .d-editor-input, #reply-control .wmd-controls .d-editor-preview {
-    background-color: #10161d;
-    color: #fff;
-}
-
 #reply-control {
     background-color: #26313e;
 }
@@ -134,4 +154,8 @@ body .boxed.white,
 
 .topic-map {
     background: #152227;
+}
+
+.user-main .about.collapsed-info .details {
+    background: rgba(245, 248, 249, 0.1);
 }
